modules/kubernetes/network-policies/allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  # Allow all ingress
  - {}
